<resources>
    <string name="app_name">My2ndSubmission</string>
    <string name="search_user">Search User</string>
    <string name="username">user: %1$s</string>
    <string name="url">Url</string>
    <string name="tab_text_1">Profile</string>
    <string name="tab_text_2">Following</string>
    <string name="tab_text_3">Followers</string>
    <string name="username_detail">User : %1$s</string>
    <string name="name">Name : %1$s</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="repository">Repository</string>
    <string name="failed_get_data">Failed getting data</string>
    <string name="username_follow">Username: %1$s</string>
    <string name="url_follow">URL: %1$s</string>
    <string name="user_info">User Info</string>
    <string name="language_settings">Language</string>
    <string name="favorite_list">Favorite List</string>
    <string name="key_alarm">alarm</string>
    <string name="is_alarm">Set Reminder at 09.00 PM</string>
    <string name="settings">Settings</string>
    <string name="notification_title">Check Out Other Users!</string>
    <string name="notification_text">Hi, it\'s time for you to check out the Github User App!!</string>
    <string name="reminder_success">Reminder successfully set up!</string>
    <string name="reminder_canceled">Reminder Turned Off</string>
    <string name="remove_from_favorites">Remove from Favorites?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="favorites">Favorites</string>
    <string name="no_favorites">No Favorites</string>
</resources>