<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detailuser.RemoveDialogFragment"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/deleteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_from_favorites"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/noButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="0.5"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/no"
            android:textColor="@color/colorAccent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="0.5"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/yes"
            android:textColor="@android:color/darker_gray"
            />
    </LinearLayout>
</LinearLayout>